==> Edmond-Sung-Tymphany/Hendrix_M_Lite_GD/sw/driver/i2c_driver/pic32/I2CDrv.c <==
#include "./I2CDrv_priv.h"
#include "attachedDevices.h"
#include "trace.h"

void I2CDrv_Ctor(cI2CDrv * me, tI2CDevice * pConfig)
{
    uint8 tempBuf;
   
    if ((NULL != me) && (0 == me->registeredUser)) // me->registeredUser == 0 means the I2C driver have not been ctor before.
    {
        /* Copy the config over */
        me->pConfig = pConfig;
        
        me->pConfig->pvSlaveCallback = NULL;

        switch (me->pConfig->i2cMode)
        {
            case I2C_MASTER_MODE:
                I2cDrv_Init(me->pConfig->channel);// implemented in attachedDevices.c for project specific.
                I2CEnable(getI2CChannel(me->pConfig->channel), FALSE);

                switch(getI2CChannel(me->pConfig->channel))
                {
                    case I2C1:
                        I2C_CLEAR_INTERRUPT(I2C_ONE);
                        I2C_BAUDRATE_SET(I2C_ONE, me->pConfig->baudRate);
                        I2CEnable(getI2CChannel(me->pConfig->channel), TRUE);
                        tempBuf = I2C_RECEIVE_BUF(I2C_ONE);
                        break;
                    case I2C2:
                        I2C_CLEAR_INTERRUPT(I2C_TWO);
                        I2C_BAUDRATE_SET(I2C_TWO, me->pConfig->baudRate);
                        I2CEnable(getI2CChannel(me->pConfig->channel), TRUE);
                        tempBuf = I2C_RECEIVE_BUF(I2C_TWO);
                        break;
                    default:
                        return;
                }
                I2CDrv_Reset(me);
                break;
            case I2C_SLAVE_MODE: /*TODO: to be implemented*/
                return;
                break;
            default:
                /* i2c mode have to be set as either master or slave*/
                return;
                break;
        }

        me->isReady = TRUE;
    }
    else
    {
        me->registeredUser++;
    }
}

void I2CDrv_Xtor(cI2CDrv * me)
{
    if((NULL != me) && (me->registeredUser > 0))
    {
        me->registeredUser--;
        if (0 == me->registeredUser)
        {/* the I2C drviver should only be xtor if no one use it any more. */
            I2CEnable(getI2CChannel(me->pConfig->channel), FALSE);
            /* set the I2C pin to tri-state to save power*/
            I2cDrv_DeInit(me->pConfig->channel);// implemented in attachedDevices.c for project specific.
        }
    }
}

bool I2CDrv_MasterWrite(cI2CDrv * me, tI2CMsg const * const  msg)
{
    bool ret = FALSE;
    INTDisableInterrupts();
    ret = _I2CDrv_MasterWrite(me, msg);
    INTEnableInterrupts();
    return ret;
}

static bool _I2CDrv_MasterWrite(cI2CDrv * me, tI2CMsg const * const  msg)
{
    uint8 *pMsg = msg->pMsg;
    uint16 unIndex;
    //TP_PRINTF("%s(0x%x , 0x%x)\n", __FUNCTION__, msg->devAddr, *(msg->pMsg));
    me->isReady = FALSE;

    i2c_start(me, FALSE);

    if(!i2cSend(me,msg->devAddr))
    {
        return FALSE;
    }

    for (unIndex = 0; unIndex <  msg->length; unIndex++)
    {
        if(!i2cSend(me, *pMsg))
        {
            return FALSE;
        }
        pMsg++;
    }

    I2CDrv_Reset(me);

    me->isReady = TRUE;

    return TRUE;
}

bool I2CDrv_MasterRead(cI2CDrv * const  me, tI2CMsg *  msg)
{
    bool ret = FALSE;
    INTDisableInterrupts();
    ret = _I2CDrv_MasterRead(me, msg);
    INTEnableInterrupts();
    return ret;
}

static bool _I2CDrv_MasterRead(cI2CDrv * const  me, tI2CMsg *  msg)
{
    bool result = TRUE;
    uint8 temp;
    uint16 i;
    uint32 regAddr;
    eI2CRegAddLen regAddrLen;
    ASSERT(me && msg && msg->pMsg);
    //TP_PRINTF("%s(0x%x , 0x%x)\n", __FUNCTION__, msg->devAddr, msg->regAddr);

    me->isReady = FALSE;

    regAddr = msg->regAddr;         
    regAddrLen = me->pConfig->regAddrLen;      /* check 8 bit or 16 bit address*/
    switch (getI2CChannel(me->pConfig->channel))
    {
        case I2C1:
        {
            I2C_HW_START_ENABLE(I2C_ONE);
            {
                i=I2C_START_TIMEOUT;
                while((!I2C_INTERRUPT_FLAG(I2C_ONE))&&(i--));

            }
            I2C_CLEAR_INTERRUPT(I2C_ONE);
            break;
        }
        case I2C2:
        {
            I2C_HW_START_ENABLE(I2C_TWO);
            {
                i=I2C_START_TIMEOUT;
                while((!I2C_INTERRUPT_FLAG(I2C_ONE))&&(i--));
            }
            I2C_CLEAR_INTERRUPT(I2C_TWO);
            break;
        }
        default:
            return FALSE;
    }

    result = i2cSend(me, msg->devAddr);

    switch (regAddrLen)
    {
        case REG_LEN_8BITS:
            temp = (uint8) regAddr;
            result = i2cSend(me, temp);
            break;
        case REG_LEN_16BITS:
            temp = (regAddr >> 8);
            result = i2cSend(me, temp); /* sending register high 8 bits */
            temp = (uint8) regAddr;
            result = i2cSend(me, temp); /* sending register low 8 bits */
            break;
        default:
            /* regAddrLen is invalid */
            ASSERT(0);
            break;
    }
    /*doing i2c restart here  */

    /*!< i2c restart */
    switch (me->pConfig->channel)
    {
        case I2C_CHANNEL_ONE:
        {
           I2C_HW_REPEATED_START_COND_ENABLE(I2C_ONE);
           while(I2C_IS_HW_REPEATED_START_COND_ENABLED(I2C_ONE));
           break;
        }
        case I2C_CHANNEL_TWO:
        {
            I2C_HW_REPEATED_START_COND_ENABLE(I2C_TWO);
            while(I2C_IS_HW_REPEATED_START_COND_ENABLED(I2C_TWO));
            break;
        }
        default:
        {
            ASSERT(0);
        }
    }

    i2cSend(me, (msg->devAddr | 0x01)); /* device address bit set to read */

    /* read bytes except the last byte. */
    uint8 *pMsg = msg->pMsg;
    for (i = 0; i < (msg->length-1); i++)
    {
        *pMsg = i2cRead(getI2CChannel(me->pConfig->channel));
        if (NULL != pMsg)
        {
            pMsg++;
        }
        i2cWaitForAck(getI2CChannel(me->pConfig->channel));
    }// end of for

    /* read the last byte */
    *pMsg = i2cRead(getI2CChannel(me->pConfig->channel));
    i2cWaitForNonAck(getI2CChannel(me->pConfig->channel));

    I2CDrv_Reset(me);
    return result;
}

bool I2CDrv_MasterWriteWith2ByteRegAddress(cI2CDrv * me, tI2CMsg * const msg)
{
    uint16 unIndex;
    uint8 tmp[2];
    me->isReady = FALSE;
    tmp[0] = (msg->regAddr & 0xFF00)>>8;
    tmp[1] = msg->regAddr & 0x00FF;

    i2c_start(me, FALSE);

    if(!i2cSend(me,msg->devAddr))
    {
        return FALSE;
    }
    if(!i2cSend(me,tmp[0]))
    {
        return FALSE;
    }
    if(!i2cSend(me,tmp[1]))
    {
        return FALSE;
    }

    for (unIndex = 0; unIndex <  msg->length; unIndex++)
    {
        if(!i2cSend(me, *( msg->pMsg)))
        {
            return FALSE;
        }
        (msg->pMsg)++;
    }

    I2CDrv_Reset(me);

    me->isReady = TRUE;

    return TRUE;
}

bool I2CDrv_MasterReadWith2ByteRegAddress( cI2CDrv * const me, tI2CMsg * msg)
{
    bool result = TRUE;
    uint16 i;
    uint8 temp;
    uint8 regAddr;
    //uint8 tmp[2];
    eI2CRegAddLen regAddrLen;
    ASSERT(me && msg && msg->pMsg);
    //TP_PRINTF("%s(0x%x , 0x%x)\n", __FUNCTION__, msg->devAddr, msg->regAddr);

    me->isReady = FALSE;

    regAddrLen = me->pConfig->regAddrLen;      /* check 8 bit or 16 bit address*/
    switch (me->pConfig->channel)
    {
        case I2C_CHANNEL_ONE:
        {
            I2C_HW_START_ENABLE(I2C_ONE);
            {
                i=I2C_START_TIMEOUT;
                while((!I2C_INTERRUPT_FLAG(I2C_ONE))&&(i--));

            }
            I2C_CLEAR_INTERRUPT(I2C_ONE);
            break;
        }
        case I2C_CHANNEL_TWO:
        {
            I2C_HW_START_ENABLE(I2C_TWO);
            {
                i=I2C_START_TIMEOUT;
                while((!I2C_INTERRUPT_FLAG(I2C_ONE))&&(i--));
            }
            I2C_CLEAR_INTERRUPT(I2C_TWO);
            break;
        }
        default:
            return FALSE;
    }

    result = i2cSend(me, msg->devAddr);
    regAddr=msg->regAddr;
    {
            temp = (regAddr >> 8);
            result = i2cSend(me, temp); /* sending register high 8 bits */
            temp = (uint8) regAddr;
            result = i2cSend(me, temp); /* sending register low 8 bits */
    }
    /*doing i2c restart here  */

    /*!< i2c restart */
    switch (me->pConfig->channel)
    {
        case I2C_CHANNEL_ONE:
        {
           I2C_HW_REPEATED_START_COND_ENABLE(I2C_ONE);
           while(I2C_IS_HW_REPEATED_START_COND_ENABLED(I2C_ONE));
           break;
        }
        case I2C_CHANNEL_TWO:
        {
            I2C_HW_REPEATED_START_COND_ENABLE(I2C_TWO);
            while(I2C_IS_HW_REPEATED_START_COND_ENABLED(I2C_TWO));
            break;
        }
        default:
        {}
    }

    i2cSend(me, (msg->devAddr | 0x01)); /* device address bit set to read */

    /* read bytes except the last byte. */
    uint8 *pMsg = msg->pMsg;
    for (i = 0; i < (msg->length-1); i++)
    {
        *pMsg = i2cRead(getI2CChannel(me->pConfig->channel));
        if (NULL != pMsg)
        {
            pMsg++;
        }
        i2cWaitForAck(getI2CChannel(me->pConfig->channel));
    }// end of for

    /* read the last byte */
    *pMsg = i2cRead(getI2CChannel(me->pConfig->channel));
    i2cWaitForNonAck(getI2CChannel(me->pConfig->channel));

    I2CDrv_Reset(me);

    return result;
}
